fixing bottom side section on mobile

--- a/pages/contact/contact.scss
+++ b/pages/contact/contact.scss
@@ -110,6 +110,10 @@
   display: none;
 }
 
+.bottom_side {
+  display: none;
+}
+
 @media screen and (max-width: 600px) {
   .container {
     flex-direction: column;
@@ -159,11 +163,6 @@
     justify-content: center;
   }
 
-  .bottom_side {
-    margin-top: 60px;
-    text-align: center;
-  }
-
   .line {
     display: block;
     border-top: 1px solid rgba(0, 0, 0, 0.6);
@@ -178,10 +177,21 @@
     margin-top: 15px;
   }
 
+  .bottom_side {
+    display: block;
+    margin-top: 100px;
+  }
+
   .icons {
     text-align: center;
     width: 100%;
     justify-content: space-around;
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-height: 608px) {
+  .bottom_side {
+    margin-top: 120px;
   }
 }
